setting up unit tests